Replace some of the parts using Arrays.ofList with List.of